# MES-Solver

./: .gitattributes  .gitignore  .~lock.README.md#  CMakeLists.txt  Grid.cpp  Grid.h  Parser.cpp  Parser.h  README.md  ShapeFunction.cpp  ShapeFunction.h  Solver.cpp  Solver.h  SolverPhysics.cpp  SolverPhysics.h  eigen.py  input.inp  linear.cpp  plot.py
MES1D/: CMakeLists.txt  Grid.cpp  Grid.h  MathSolver.cpp  MathSolver.h  Parser.cpp  Parser.h  README.md  Solver.h  SolverPhysics.cpp  eigen.py  gif.py  input.inp  plot.py  stationary_linear.inp  stationary_nonlinear.inp  time_dependent.inp
MES2D/: .gitignore  Grid.cpp  Grid.hpp  Point.cpp  main.cpp  main_time.cpp  plot.py  test
MES2D/mesh/: DoFHandler.cpp  DoFHandler.hpp  Grid.cpp  Grid.hpp  Point.cpp  Point.hpp
MES2D/plot/: gif.py  mesh_plot.py  shape_func.py  u_plot.py
MES2D/solver/: Assembler.cpp  Assembler.hpp  Physics.cpp  Physics.hpp  Quadrature.cpp  Quadrature.hpp  engine.cpp  engine.hpp  shapeFunction.cpp  shapeFunction.hpp  timeDep.cpp  timeDep.hpp
MES_SOLVER/: Grid.cpp  Grid.h  README.MD  Solver.cpp  Solver.h  eigen.py  linear.cpp  plot.py
